--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -14,6 +14,7 @@
   "breakdown": "Breakdown",
   "management": "Management",
   "admin": "Admin",
+  "wastemanagementDashboard":"Data Dashboard",
   "performance": "Performance",
   "WASTE_MANAGEMENT_TITLE": "Waste Management",
     "WASTE_MANAGEMENT_SUBTITLE": "Forms of waste management",
@@ -81,12 +82,36 @@
     "Geography": "Geography",
     "Options": "Options",
     "MyForms": "My Forms",
-    "Daily": "Daily",
-    "Monthly": "Monthly",
-    "Breakdown": "Breakdown",
+    "Daily": "Number of Active Contracts",
+    "Monthly": "Value of Active Contracts",
+    "Breakdown": "Credit and Actual Income",
     "Management": "Management",
     "Admin": "Admin",
-    "Settings": "Settings"
+    "Settings": "Settings",
+    "Chart of daily forms": "Chart of active contracts",
+    "Time Interval": "Time Interval",
+    "Number of Active Contracts": "Number of Active Contracts",
+    "Description": "Description",
+    "This plot visualizes the number of contracts that remain active at each time interval, considering the span between the start and end dates. A contract is counted as active for a given interval if the project commenced (ContractCommencement-Start Date) before or during that interval and did not conclude (ContractEnd-End Date) before the interval's start. This analysis allows for tracking the fluctuation in active contracts over time, providing insights into contract management and operational workload.": "This plot visualizes the number of contracts that remain active at each time interval, considering the span between the start and end dates. A contract is counted as active for a given interval if the project commenced (ContractCommencement-Start Date) before or during that interval and did not conclude (ContractEnd-End Date) before the interval's start. This analysis allows for tracking the fluctuation in active contracts over time, providing insights into contract management and operational workload.",
+    "Value of Active Contracts": "Value of Active Contracts",
+    "Chart of monthly forms": "Chart of monthly forms",
+    "This plot visualizes the sum of the values of contracts (Contract-Contract Price) that remain active at each time interval, considering the span between the start and end dates. A contract is counted as active for a given interval if the project commenced (ContractCommencement-Start Date) before or during that interval and did not conclude (ContractEnd-End Date) before the interval's start. This analysis allows for tracking the fluctuation in active contracts over time, providing insights into contract management and operational workload.": "This plot visualizes the sum of the values of contracts (Contract-Contract Price) that remain active at each time interval, considering the span between the start and end dates. A contract is counted as active for a given interval if the project commenced (ContractCommencement-Start Date) before or during that interval and did not conclude (ContractEnd-End Date) before the interval's start. This analysis allows for tracking the fluctuation in active contracts over time, providing insights into contract management and operational workload.",
+    "Credit and Actual Income": "Credit and Actual Income",
+    "Breakdown of Forms By Category": "Breakdown of Forms By Category",
+    "This double bar chart compares two key financial metrics across each time interval: (1) the total amount of all installments (ContractInstallment-Amount) due (ContractInstallment-Due Date) within that interval, and (2) the total amount of all payments (ContractRecievedPayment-Amount) made (ContractRecievedPayment-Date Paid) within that interval. Each interval features a pair of bars; the first bar represents the sum of installment amounts due, and the second bar shows the sum of payment amounts made. This visualization aids in assessing the alignment between scheduled dues and actual payments over time, highlighting periods of over or underpayment and facilitating financial planning and analysis.": "This double bar chart compares two key financial metrics across each time interval: (1) the total amount of all installments (ContractInstallment-Amount) due (ContractInstallment-Due Date) within that interval, and (2) the total amount of all payments (ContractRecievedPayment-Amount) made (ContractRecievedPayment-Date Paid) within that interval. Each interval features a pair of bars; the first bar represents the sum of installment amounts due, and the second bar shows the sum of payment amounts made. This visualization aids in assessing the alignment between scheduled dues and actual payments over time, highlighting periods of over or underpayment and facilitating financial planning and analysis.",
+    "description":"This double bar chart compares two key financial metrics across each time interval: (1) the total amount of all installments (ContractInstallment-Amount) due (ContractInstallment-Due Date) within that interval, and (2) the total amount of all payments (ContractRecievedPayment-Amount) made (ContractRecievedPayment-Date Paid) within that interval. Each interval features a pair of bars; the first bar represents the sum of installment amounts due, and the second bar shows the sum of payment amounts made. This visualization aids in assessing the alignment between scheduled dues and actual payments over time, highlighting periods of over or underpayment and facilitating financial planning and analysis.",
+    "yAxisTitle": "Amount (ریال)",
+    "timeInterval":"Time Interval",
+    "plotType": "Double Bar Chart",
+    "title":"Credit and Actual Income",
+    "Comparison of Financial Metrics":"Comparison of Financial Metrics",
+    "dashboardTitle": "Waste Management Data Dashboard",
+  "crmFinanceTitle": "1. CRM and Finance",
+  "wasteOverviewTitle": "2. Waste Management Overview",
+  "healthSafetyTitle": "3. Health and Safety",
+  "origin": "Origin",
+  "destination": "Destination",
+  "healthSafetyChartTitle": "Number of Incidents"
 }
 
 
