--- a/src/translations/fa.json
+++ b/src/translations/fa.json
@@ -14,6 +14,7 @@
   "breakdown": "تجزیه و تحلیل",
   "management": "مدیریت",
   "admin": "مدیر",
+  "wastemanagementDashboard":"مدیریت داده‌ ها",
   "performance": "عملکرد",
   "WASTE_MANAGEMENT_TITLE": "مدیریت پسماند ",
     "WASTE_MANAGEMENT_SUBTITLE": "فرم های مدیریت پسماند",
@@ -79,11 +80,37 @@
     "Geography": "جغرافیا",
     "Options": "گزینه‌ها",
     "MyForms": "فرم‌های من",
-    "Daily": "روزانه",
-    "Monthly": "ماهانه",
-    "Breakdown": "تجزیه و تحلیل",
+    "Daily": "تعداد قراردادهای فعال",
+    "Monthly": "ارزش قراردادهای فعال",
+    "Breakdown": "درآمد اعتباری و واقعی",
     "Management": "مدیریت",
     "Admin": "مدیر سیستم",
-    "Settings": "تنظیمات"
+    "Settings": "تنظیمات",
+    "Chart of daily forms": "نمودار قرارداد های فعال",
+    "Number of Active Contracts": "تعداد قراردادهای فعال",   
+    "This plot visualizes the number of contracts that remain active at each time interval, considering the span between the start and end dates. A contract is counted as active for a given interval if the project commenced (ContractCommencement-Start Date) before or during that interval and did not conclude (ContractEnd-End Date) before the interval's start. This analysis allows for tracking the fluctuation in active contracts over time, providing insights into contract management and operational workload.": "این نمودار تعداد قراردادهایی را که در هر بازه زمانی هنوز فعال هستند را نشان می‌دهد، با در نظر گرفتن بازه زمانی بین تاریخ‌های شروع و پایان. یک قرارداد به عنوان فعال برای یک بازه زمانی مشخص شده شمرده می‌شود اگر پروژه قبل از یا در طول آن بازه شروع شود (شروع قرارداد-تاریخ شروع) و قبل از شروع بازه به اتمام نرسد (پایان قرارداد-تاریخ پایان). این تجزیه و تحلیل به پیگیری نوسان در تعداد قراردادهای فعال در طول زمان کمک می‌کند و بینشی در مدیریت قرارداد و بار کاری عملیاتی فراهم می‌کند.",
+    "Value of Active Contracts": "ارزش قراردادهای فعال",
+    "Chart of monthly forms": "نمودار فرم‌های ماهانه",
+    "Time Interval": "بازه زمانی",    
+    "Description": "توضیحات",
+    "This plot visualizes the sum of the values of contracts (Contract-Contract Price) that remain active at each time interval, considering the span between the start and end dates. A contract is counted as active for a given interval if the project commenced (ContractCommencement-Start Date) before or during that interval and did not conclude (ContractEnd-End Date) before the interval's start. This analysis allows for tracking the fluctuation in active contracts over time, providing insights into contract management and operational workload.": "این نمودار جمع ارزش قراردادهایی (قرارداد-قیمت قرارداد) را که در هر بازه زمانی فعال می‌مانند، با در نظر گرفتن بازه زمانی بین تاریخ‌های شروع و پایان نمایش می‌دهد. یک قرارداد به عنوان فعال برای یک بازه زمانی مشخص شده شمرده می‌شود اگر پروژه قبل از یا در طول آن بازه شروع شود (شروع قرارداد-تاریخ شروع) و قبل از شروع بازه به اتمام نرسد (پایان قرارداد-تاریخ پایان). این تجزیه و تحلیل به پیگیری نوسان در تعداد قراردادهای فعال در طول زمان کمک می‌کند و بینشی در مدیریت قرارداد و بار کاری عملیاتی فراهم می‌کند.",
+    "Credit and Actual Income": "درآمد اعتباری و واقعی",
+    "Breakdown of Forms By Category": "تجزیه و تحلیل فرم‌ها بر اساس دسته‌بندی",
+    "This double bar chart compares two key financial metrics across each time interval: (1) the total amount of all installments (ContractInstallment-Amount) due (ContractInstallment-Due Date) within that interval, and (2) the total amount of all payments (ContractRecievedPayment-Amount) made (ContractRecievedPayment-Date Paid) within that interval. Each interval features a pair of bars; the first bar represents the sum of installment amounts due, and the second bar shows the sum of payment amounts made. This visualization aids in assessing the alignment between scheduled dues and actual payments over time, highlighting periods of over or underpayment and facilitating financial planning and analysis.": "این نمودار مقایسه‌ای از دو معیار مالی کلیدی در هر بازه زمانی است: (1) مجموع مبلغ تمام اقساط (ContractInstallment-Amount) که تا تاریخ سررسید (ContractInstallment-Due Date) در آن بازه است، و (2) مجموع مبلغ تمام پرداختی‌ها (ContractRecievedPayment-Amount) که در هر بازه پرداخت شده است (ContractRecievedPayment-Date Paid). هر بازه دارای یک جفت نوار است؛ نوار اول نماینده مجموع مبالغ اقساط سررسید شده است، و نوار دوم مجموع مبالغ پرداخت شده را نمایش می‌دهد. این تصویربرداری به ارزیابی تطابق بین سررسیدها و پرداخت‌های واقعی در طول زمان کمک می‌کند، دوره‌های بیش‌پرداخت و کم‌پرداخت را برجسته می‌کند و برنامه‌ریزی و تجزیه و تحلیل مالی را تسهیل می‌کند.",
+
+    "plotType": "Double Bar Chart",
+    "timeInterval":"بازه زمانی",
+    "yAxisTitle":  "مقدار - ریال",
+    "description": "این نمودار مقایسه ای دوگانه دو معیار مالی کلیدی را در هر بازه زمانی مقایسه می کند: (1) مجموع مقدار همه اقساط (مبلغ اقساط قرارداد-تاریخ سررسید اقساط قرارداد) درون آن بازه، و (2) مجموع مقدار همه پرداخت ها (مبلغ پرداختی دریافتی قرارداد-تاریخ پرداخت دریافتی قرارداد) درون آن بازه. هر بازه دارای یک جفت نمودار است؛ نمودار اول مجموع مقدار اقساط معوقه را نشان می دهد و نمودار دوم مجموع مقدار پرداخت های صورت گرفته را نشان می دهد. این نمایش به ارزیابی تطابق بین معاملات زمان بندی شده و پرداخت های واقعی در طول زمان کمک می کند، دوره های پرداخت بیش از یا کمتر و برنامه ریزی مالی و تجزیه و تحلیل را تسهیل می کند.",
+    "Comparison of Financial Metrics":"مقایسه معیارهای مالی",
+    "dashboardTitle": "داشبورد داده‌های مدیریت پسماند",
+  "crmFinanceTitle": "1. مدیریت ارتباط با مشتری و مالی",
+  "wasteOverviewTitle": "2. مرور مدیریت پسماند",
+  "healthSafetyTitle": "3. بهداشت و ایمنی",
+  "origin": "مبدأ",
+  "destination": "مقصد",
+  "healthSafetyChartTitle": "تعداد حوادث"
+
+  
 }
   
