--- a/src/translations/fa.json
+++ b/src/translations/fa.json
@@ -3,7 +3,7 @@
   "logOut": "خروج",
   "dashboard": "داشبورد",
   "clientFacing": "راهنمای مشتری",
-  "wastemanagement": "مدیریت زباله",
+  "wastemanagement": "مدیریت پسماند",
   "healthAndSafety": "سلامت و ایمنی",
   "crmAndFinance": "CRM و مالی",
   "geography": "جغرافیا",
